# wgc

./: .gitignore  app_settings.py  pyproject.toml  settings.yml  setup.py  wgc.py  wireguard_config.py  wireguard_ops.py  wireguard_peer.py
docs/: python_click_notes.md  wg_cmd_notes.md  wgc_conops.md
test_data/: test.priv.key  test.pub.key  wg0.conf
tests/: test_wgc.py
typings/jsonpickle/: __init__.pyi  backend.pyi  compat.pyi  errors.pyi  handlers.pyi  pickler.pyi  tags.pyi  unpickler.pyi  util.pyi  version.pyi
